Fix-01: переработка структуры и подготовка к подключению многопоточности